--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
         </div>
     </div>
 
+
+    <ul><li>HTML, CSS y Javascript</li><li>Diseño Responsive</li><li>Transformaciones y transiciones CSS</li><li>Flexbox y Grid</li><li>Bootstrap</li><li>ES6</li><li>Chrome Devtools</li><li>Programación Oriendata a Objetos</li><li>Estructuras de datos JS</li></ul>
     
 
  
